--- a/WebFrontEnd/WebFrontEnd.csproj
+++ b/WebFrontEnd/WebFrontEnd.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.SignalR.Core" Version="2.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0-rc1-final" />
   </ItemGroup>
 
   <ItemGroup>
