--- a/WebFrontEnd/package.json
+++ b/WebFrontEnd/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
-    "@aspnet/signalr": "^1.0.0-rc1-update1",
-    "@types/googlemaps": "^3.30.8",
+    "@aspnet/signalr": "^1.0.0",
+    "@types/googlemaps": "^3.30.9",
     "@types/history": "4.6.0",
     "@types/markerclustererplus": "^2.1.33",
     "@types/react": "15.0.35",
@@ -27,7 +27,6 @@
     "json-loader": "0.5.4",
     "react": "15.6.1",
     "react-dom": "15.6.1",
-    "react-google-maps": "^9.4.5",
     "react-hot-loader": "3.0.0-beta.7",
     "react-router-dom": "4.1.1",
     "signalr": "^2.2.3",
@@ -38,7 +37,7 @@
     "webpack-hot-middleware": "2.18.2"
   },
   "dependencies": {
-    "google-maps": "^3.3.0",
-    "react-google-maps": "^9.4.5"
+    "react-google-maps": "^9.4.5",
+    "tslib": "^1.9.2"
   }
 }
